--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/insta-saas-db?schema=public"
+DATABASE_URL="postgresql://postgres:123456@localhost:5432/beta-saas-db?schema=public"
 API_URL="http://localhost:5000"
 PORT=5000
 
